--- a/terraform_final_project/ansible/main.yaml
+++ b/terraform_final_project/ansible/main.yaml
@@ -1,6 +1,22 @@
+# - name: kandula_playbook
+#   hosts: tag_consul_server_true
+#   remote_user: ubuntu
+#   become: yes
+#   become_user: root
+#   tasks:
+#     - name: Include consul role server
+#       include_role: 
+#         name: consul
+#         tasks_from: consul_server.yaml
+
+
 - name: kandula_playbook
-  hosts: tag_consul_server_true
+  hosts: tag_consul_agent_true
   remote_user: ubuntu
   become: yes
-  roles:
-    - consul
+  become_user: root
+  tasks:
+    - name: Include consul role agent
+      include_role: 
+        name: consul
+        tasks_from: consul_agent.yaml
