--- a/terraform_final_project/ansible/main.yaml
+++ b/terraform_final_project/ansible/main.yaml
@@ -1,22 +1,8 @@
-# - name: kandula_playbook
-#   hosts: tag_consul_server_true
-#   remote_user: ubuntu
-#   become: yes
-#   become_user: root
-#   tasks:
-#     - name: Include consul role server
-#       include_role: 
-#         name: consul
-#         tasks_from: consul_server.yaml
-
-
 - name: kandula_playbook
-  hosts: tag_consul_agent_true
+  hosts: all
   remote_user: ubuntu
   become: yes
   become_user: root
-  tasks:
-    - name: Include consul role agent
-      include_role: 
-        name: consul
-        tasks_from: consul_agent.yaml
+  become_method: sudo
+  roles:
+    - consul
