--- a/terraform_final_project/ansible/roles/consul/tasks/main.yaml
+++ b/terraform_final_project/ansible/roles/consul/tasks/main.yaml
@@ -1,7 +1,28 @@
-- include_tasks: consul_agent.yaml
-  tags:
-    - tag_consul_agent_true
+---
+- name: copy consul template
+  template:
+    dest: /home/ubuntu/consul-server.sh
+    src: consul-server.j2
+    mode: '0755'
 
-- include_tasks: consul_server.yaml
-  tags:
-    - tag_consul_server_true
+- name: run script
+  command: /home/ubuntu/consul-server.sh
+
+# - name: consul_server_script_install
+#   copy:
+#     src: consul-server.sh 
+#     dest: /home/ubuntu
+#     mode: '0755'
+
+
+# - name: get the machine private ip
+#   shell:
+#     cmd: curl http://169.254.169.254/latest/meta-data/local-ipv4
+#   register: private_ip
+
+# - set_fact:
+#     private_ip: "{{ private_ip.stdout }}"
+
+# - name: cat the variable 
+#   shell:
+#     cmd: echo {{ private_ip }} > file.txt
