--- a/terraform_final_project/ansible/roles/consul/tasks/main.yaml
+++ b/terraform_final_project/ansible/roles/consul/tasks/main.yaml
@@ -8,12 +8,6 @@
 - name: run script
   command: /home/ubuntu/consul-server.sh
 
-# - name: consul_server_script_install
-#   copy:
-#     src: consul-server.sh 
-#     dest: /home/ubuntu
-#     mode: '0755'
-
 
 # - name: get the machine private ip
 #   shell:
@@ -23,6 +17,35 @@
 # - set_fact:
 #     private_ip: "{{ private_ip.stdout }}"
 
-# - name: cat the variable 
-#   shell:
-#     cmd: echo {{ private_ip }} > file.txt
+# - name: Install unzip and dnsmask
+#   apt:
+#     pkg:
+#     - unzip
+#     - dnsmask
+#     update_cache: yes
+
+# - name: Copy dnsmask conf file
+#   ansible.builtin.copy:
+#     src: 10-consul
+#     dest: /etc/dnsmasq.d/
+#     force: yes
+#     owner: root
+#     group: root
+#     mode: '0644'
+#   notify: "restart dnsmask service"
+
+# - name: Copy resolved.conf file
+#   ansible.builtin.copy:
+#     src: resolved.conf
+#     dest: /etc/systemd/
+#     force: yes
+#     owner: root
+#     group: root
+#     mode: '0644'
+#   notify: "restart resolved service"
+
+# - name: Download consul
+#   get_url:
+#     url: "https://releases.hashicorp.com/consul/{{ CONSUL_VERSION }}/consul_{{ CONSUL_VERSION }}_linux_amd64.zip"
+#     dest: /tmp/consul.zip
+#     # mode: '0440'
