--- a/terraform_final_project/ansible/roles/prometheus/tasks/main.yml
+++ b/terraform_final_project/ansible/roles/prometheus/tasks/main.yml
@@ -1,9 +1,11 @@
 ---
 - name: copy prometheus template
   copy:
-    dest: /home/ubuntu/inst_node_exporter.sh
-    src: inst_node_exporter.sh
+    dest: /home/ubuntu/
+    src: compose
     mode: '0755'
 
-- name: run script
-  command: /home/ubuntu/inst_node_exporter.sh
+- name: Run container
+  shell:
+    cmd: "docker-compose up -d"
+    chdir: /home/ubuntu/compose
