--- a/terraform_final_project/ansible/roles/consul/handlers/main.yml
+++ b/terraform_final_project/ansible/roles/consul/handlers/main.yml
@@ -1,13 +1,19 @@
 ---
 # handlers file for consul
-- name: Restart apache
+- name: restart dnsmask
   ansible.builtin.service:
     name: dnsmasq
     state: restarted
   listen: "restart dnsmask service"
 
-- name: Restart apache
+- name: restart resolved
   ansible.builtin.service:
-    name: systemd-resolved
+    name: systemd-resolved.service
     state: restarted
   listen: "restart resolved service"
+
+- name: restart consul
+  ansible.builtin.service:
+    name: consul.service
+    state: restarted
+  listen: "restart consul service" 
