--- a/terraform_final_project/ansible/roles/prometheus/handlers/main.yml
+++ b/terraform_final_project/ansible/roles/prometheus/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
-# handlers file for prometheus
+- name: restart consul
+  ansible.builtin.service:
+    name: consul.service
+    state: restarted
+  listen: "restart consul service" 
+
