--- a/terraform_final_project/ansible/roles/prometheus/tasks/main.yml
+++ b/terraform_final_project/ansible/roles/prometheus/tasks/main.yml
@@ -5,6 +5,12 @@
     src: compose
     mode: '0755'
 
+- name: copy prometheus template
+  template:
+    dest: /home/ubuntu/compose/prometheus/prometheus.yml
+    src: prometheus.yml.j2
+    mode: '0755'
+
 - name: Run container
   shell:
     cmd: "docker-compose up -d"
