--- a/terraform_final_project/ansible/promethus.yaml
+++ b/terraform_final_project/ansible/promethus.yaml
@@ -1,5 +1,5 @@
 - name: kandula_playbook
-  hosts: tag_prometheus_server_true
+  hosts: tag_prometheus_server_true:&tag_kandula_app_true
   remote_user: ubuntu
   become: yes
   become_user: root
