working role for jenkins master with user and pass

--- a/terraform_final_project/ansible/roles/jenkins-role/defaults/main.yml
+++ b/terraform_final_project/ansible/roles/jenkins-role/defaults/main.yml
@@ -1,2 +1,14 @@
 ---
 # defaults file for jenkins-role
+jenkins_init_file: /etc/default/jenkins
+jenkins_url_prefix: " "
+jenkins_home: /var/lib/jenkins
+jenkins_admin_password: "moshe#"
+jenkins_admin_username: "moshe"
+
+jenkins_init_changes:
+  - option: "JENKINS_ARGS"
+    value: "--webroot=/var/cache/$NAME/war --httpPort=$HTTP_PORT"
+  - option: "JAVA_ARGS"
+    value: "-Djenkins.install.runSetupWizard=false"
+
