--- a/terraform_final_project/ansible/roles/jenkins-role/handlers/main.yml
+++ b/terraform_final_project/ansible/roles/jenkins-role/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for jenkins-role
+- name: restart jenkins
+  service: 
+    name: jenkins
+    state: restarted
+  listen: "restart jenkins service"
+
