add ansible roles for kibana and elastic, update filebeat

--- a/terraform_final_project/ansible/elasticsearch_kibana.yaml
+++ b/terraform_final_project/ansible/elasticsearch_kibana.yaml
@@ -1,9 +1,9 @@
 - name: kandula_playbook
-  hosts: tag_jenkins_true
+  hosts: tag_elasticsearch_kibana_true
   remote_user: ubuntu
   become: yes
   become_user: root
   become_method: sudo
   roles:
-    - docker-role
-    - jenkins-role
+    - elasticsearch-role
+    - kibana-role
