--- a/terraform_final_project/ansible/roles/filebeat/files/filebeat.yml
+++ b/terraform_final_project/ansible/roles/filebeat/files/filebeat.yml
@@ -12,7 +12,7 @@ filebeat.modules:
 filebeat.config.modules:
   path: ${path.config}/modules.d/*.yml
   reload.enabled: true
-setup.dashboards.enabled: true
+
 setup.template.name: "filebeat"
 setup.template.pattern: "filebeat-*"
 setup.template.settings:
@@ -23,7 +23,7 @@ processors:
   - add_cloud_metadata: ~
 output.elasticsearch:
 # need to change to connet with counsul
-  hosts: [ "localhost:9200" ]
+  hosts: [ "Elasticsearch.service.opsschool.consul:9200" ]
   index: "filebeat-%{[agent.version]}-%{+yyyy.MM.dd}"
 ## OR
 #output.logstash:
