--- a/terraform_final_project/kubeFiles/values_consul.yaml
+++ b/terraform_final_project/kubeFiles/values_consul.yaml
@@ -1168,7 +1168,8 @@ syncCatalog:
   # ```
   #
   # @type: string
-  nodeSelector: null
+  nodeSelector: |
+    beta.kubernetes.io/arch: amd64
 
   # Affinity Settings
   # This should be a multi-line string matching the affinity object
