--- a/terraform_final_project/kubeFiles/kandula_deploy.yaml
+++ b/terraform_final_project/kubeFiles/kandula_deploy.yaml
@@ -23,7 +23,7 @@ spec:
         whenUnsatisfiable: DoNotSchedule
         labelSelector:
           matchLabels:
-            app: kalandula   
+            app: backend   
       containers:
       - name: kandula
         image: devmozes/kandula:latest
