--- a/terraform_final_project/kubeFiles/kandula_service.yaml
+++ b/terraform_final_project/kubeFiles/kandula_service.yaml
@@ -14,3 +14,8 @@ spec:
       targetPort: 5000
       nodePort: 30037
       protocol: TCP
+    - name: http
+      port: 9100
+      targetPort: 9222
+      nodePort: 30037
+      protocol: TCP
