add lb for internal services + check on prometheus

--- a/terraform_final_project/ansible/inventory/aws_ec2.yaml
+++ b/terraform_final_project/ansible/inventory/aws_ec2.yaml
@@ -5,3 +5,11 @@ regions:
 keyed_groups:
   - prefix: tag
     key: tags
+compose:
+  # Use the private IP address to connect to the host
+  # (note: this does not modify inventory_hostname, which is set via I(hostnames))
+  ansible_host: private_ip_addre
+
+hostnames:
+  # list in order of hostname precedence; if no var in the list exists for the host do not add the host to inventory
+  - private-ip-address
