fix sg, elastic

--- a/terraform_final_project/ansible/roles/kibana-role/tasks/main.yml
+++ b/terraform_final_project/ansible/roles/kibana-role/tasks/main.yml
@@ -25,10 +25,12 @@
     name: kibana
     state: started
 
-# # add consul service file
-# - name: copy elastic consul service
-#   copy:
-#     dest: /etc/consul.d/kibana-consul.json
-#     src: kibana-consul.json
+# - name: copy consul-prometheus-grafana template
+#   template:
+#     dest: /etc/consul.d/elasticsearch_kibana.json
+#     src: elasticsearch_kibana.json.j2
+#     force: yes
+#     owner: consul
+#     group: consul
 #     mode: '0755'
-#   notify: restart consul service
+#   notify: "restart consul service"
